fix spacing on navbar-right

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -271,16 +271,18 @@
 }
 
 #header .navbar-nav.navbar-right >li:last-child{
-  margin-right: 1em;
+  margin-right: 0px;
 }
 
 #header .navbar-nav.navbar-right >li a {
   color: #000;
   font-size: 12px;
-  padding: 1em;
+  padding: 1.5em 0 .5em 1em;
   text-transform: uppercase;
   font-weight: 300;
 }
+
+
 
 
 #header .navbar-inverse .navbar-nav  li.active > a,
